@@ -200,9 +200,9 @@ void TextboxVisualsProperty::UpdateProperties(const int dispid)
                     text->m_pIFont->Release();
                     // create the new one
                     OleCreateFontIndirect(&fd, IID_IFont, (void **)&text->m_pIFont);
-                    text->m_d.m_fontsize = (float)((-font.lfHeight * 72) / GetDeviceCaps(g_pvp->GetDC(), LOGPIXELSY));
+                    float fontsize = (float)((-font.lfHeight * 72) / GetDeviceCaps(g_pvp->GetDC(), LOGPIXELSY));
                     CY size;
-                    size.int64 = (LONGLONG)(text->m_d.m_fontsize * 10000.0f);
+                    size.int64 = (LONGLONG)(fontsize * 10000.0f);
                     text->m_pIFont->put_Size(size);
                     free(fd.lpstrName);
                     text->m_d.m_fontcolor = m_fontDialog.GetColor();
