@@ -71,8 +71,8 @@ void Textbox::SetDefaults(bool fromMouseClick)
       m_d.m_transparent = LoadValueBoolWithDefault(regKey, "Transparent"s, false);
       m_d.m_isDMD = LoadValueBoolWithDefault(regKey, "DMD"s, false);
 
-      m_d.m_fontsize = LoadValueFloatWithDefault(regKey, "FontSize"s, 14.25f);
-      fd.cySize.int64 = (LONGLONG)(m_d.m_fontsize * 10000.0f);
+      float fontsize = LoadValueFloatWithDefault(regKey, "FontSize"s, 14.25f);
+      fd.cySize.int64 = (LONGLONG)(fontsize * 10000.0f);
 
       string tmp;
       HRESULT hr;
@@ -166,8 +166,13 @@ char * Textbox::GetFontName()
 
 HFONT Textbox::GetFont()
 {
+    FONTDESC fd;
+    fd.cbSizeofstruct = sizeof(FONTDESC);
+    m_pIFont->get_Size(&fd.cySize);
+    const float fontSize = (float)(fd.cySize.int64 / 10000.0);
+
     LOGFONT lf = {};
-    lf.lfHeight = -MulDiv((int)m_d.m_fontsize, GetDeviceCaps(g_pvp->GetDC(), LOGPIXELSY), 72);
+    lf.lfHeight = -MulDiv((int)fontSize, GetDeviceCaps(g_pvp->GetDC(), LOGPIXELSY), 72);
     lf.lfCharSet = DEFAULT_CHARSET;
     lf.lfQuality = NONANTIALIASED_QUALITY;
 
@@ -248,14 +253,9 @@ void Textbox::GetHitShapesDebug(vector<HitObject*> &pvho)
 
 void Textbox::EndPlay()
 {
-   if (m_texture)
-   {
-      delete m_texture;
-      m_texture = nullptr;
-
-      m_pIFontPlay->Release();
-   }
-
+   delete m_texture;
+   m_texture = nullptr;
+   SAFE_RELEASE(m_pIFontPlay);
    IEditable::EndPlay();
 }
 
